# notification_app_demo

./: .gitignore  pyproject.toml
app/: __init__.py  app.py  posts_list.txt
app/templates/: index.html  posts.html
news_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
notifications_app_demo.egg-info/: SOURCES.txt  requires.txt
