[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notifications_app_demo"
version = "0.1.0"
description = "A Flask app serving dynamic company news & updates with scheduled posts."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "vakesz", email = "hello@vakesz.com" }
]
dependencies = [
  "flask>=2.3.0",
  "Jinja2>=3.0",
]

[project.urls]
Homepage = "https://github.com/vakesz/notifications_app_demo"

[project.scripts]
news-app = "app:main"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
app = [
    "web/templates/**/*",
]